tabs z-index fixed

--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -12,7 +12,6 @@ body {
 
 #wrap {
   position:relative;
-  z-index:40;
   padding:2.5em;
   background:#fdf8f4;
   -moz-box-shadow: #4F321D 0px 4px 15px 2px;
@@ -38,35 +37,40 @@ body {
 
 .nav {
   position: absolute;
-  top: -1.95em;
+  z-index:-30;
+  top: -2.65em;
   right: 2em;
   text-align: right;
 }
 
 .nav ul,.nav li {
   list-style: none;
-  display: inline;
-  margin: 0;
+  display: inline-block;
+  margin:0 0 0 0.25em;
   padding: 0;
 }
 
 .nav a {
-  -moz-box-shadow: #4F321D 0px 4px 15px 2px;
-  -webkit-box-shadow: #4F321D 0px 4px 15px 2px;
   position:relative;
-  z-index:30;
+  z-index:-1;
   text-transform:uppercase;
   background:#f6efe1;
   border:none;
-  margin:0;
+  display:inline-block;
   font-size:87.5%;
   font-weight:bold;
   padding:0.75em 0.75em;
+  box-shadow: #4F321D 0px 4px 15px 2px;
+  -moz-box-shadow: #4F321D 0px 4px 15px 2px;
+  -webkit-box-shadow: #4F321D 0px 4px 15px 2px;
 }
 
 .nav .ui-tabs-selected a {
+  z-index:30;
   background: #fdf8f4;
-  z-index:31;
+  box-shadow: none;
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
 }
 
 .nav a:hover {
@@ -199,3 +203,14 @@ span.amp {
 dt {
   font-style: italic;
 }
+
+/* social media icons */
+/*a[href^=mailto] {
+  color:blue;
+}
+
+a[href*=delicious] {
+  background:url(/images/icons/delicious.png) no-repeat;
+  padding:20px;
+  display:block;
+}*/
